Reformat and Make LF character consistent between files.