@@ -66,9 +66,9 @@ public class Oauth2Bigquery {
     /**
      * Browsers to try:
      */
-    static final String[] browsers = { "google-chrome", "firefox", "opera",
+    static final String[] browsers = {"google-chrome", "firefox", "opera",
             "epiphany", "konqueror", "conkeror", "midori", "kazehakase",
-            "mozilla" };
+            "mozilla"};
     /**
      * Google client secrets or {@code null} before initialized in
      * {@link #authorize}.
@@ -93,18 +93,14 @@ public class Oauth2Bigquery {
      * Authorizes the installed application to access user's protected data. if
      * possible, gets the credential from xml file at PathForXmlStore
      *
-     * @param transport
-     *            HTTP transport
-     * @param jsonFactory
-     *            JSON factory
-     * @param receiver
-     *            verification code receiver
-     * @param scopes
-     *            OAuth 2.0 scopes
+     * @param transport   HTTP transport
+     * @param jsonFactory JSON factory
+     * @param receiver    verification code receiver
+     * @param scopes      OAuth 2.0 scopes
      */
     public static Credential authorize(HttpTransport transport,
-            JsonFactory jsonFactory, VerificationCodeReceiver receiver,
-            List<String> scopes, String clientid, String clientsecret)
+                                       JsonFactory jsonFactory, VerificationCodeReceiver receiver,
+                                       List<String> scopes, String clientid, String clientsecret)
             throws Exception {
 
         BQXMLCredentialStore Store = new BQXMLCredentialStore(
@@ -145,8 +141,7 @@ public class Oauth2Bigquery {
             // automatically refreshed.
             return Oauth2Bigquery.codeflow.createAndStoreCredential(response,
                     clientid + ":" + clientsecret);
-        }
-        finally {
+        } finally {
             receiver.stop();
         }
     }
@@ -161,7 +156,7 @@ public class Oauth2Bigquery {
      * @throws SQLException
      */
     public static Bigquery authorizeviainstalled(String clientid,
-            String clientsecret) throws SQLException {
+                                                 String clientsecret) throws SQLException {
         LocalServerReceiver rcvr = new LocalServerReceiver();
         List<String> Scopes = new ArrayList<String>();
         Scopes.add(BigqueryScopes.BIGQUERY);
@@ -172,8 +167,7 @@ public class Oauth2Bigquery {
                     CmdlineUtils.getHttpTransport(),
                     CmdlineUtils.getJsonFactory(), rcvr, Scopes, clientid,
                     clientsecret);
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             throw new SQLException(e);
         }
         logger.debug("Creating a new bigquery client.");
@@ -194,7 +188,7 @@ public class Oauth2Bigquery {
      * @throws IOException
      */
     public static Bigquery authorizeviaservice(String serviceaccountemail,
-            String keypath) throws GeneralSecurityException, IOException {
+                                               String keypath) throws GeneralSecurityException, IOException {
         logger.debug("Authorizing with service account.");
 
         List<String> scopes = new ArrayList<String>();
@@ -203,10 +197,10 @@ public class Oauth2Bigquery {
                 .setTransport(CmdlineUtils.getHttpTransport())
                 .setJsonFactory(CmdlineUtils.getJsonFactory())
                 .setServiceAccountId(serviceaccountemail)
-                // e-mail ADDRESS!!!!
+                        // e-mail ADDRESS!!!!
                 .setServiceAccountScopes(scopes)
-                // Currently we only want to access bigquery, but it's possible
-                // to name more than one service too
+                        // Currently we only want to access bigquery, but it's possible
+                        // to name more than one service too
                 .setServiceAccountPrivateKeyFromP12File(new File(keypath))
                 .build();
         logger.debug("Authorizied?");
@@ -234,8 +228,7 @@ public class Oauth2Bigquery {
                     desktop.browse(URI.create(url));
                     logger.debug("success");
                     return;
-                }
-                catch (IOException e) {
+                } catch (IOException e) {
                     logger.debug("Failed with desktop.browse", e);
                     // handled below
                 }
@@ -252,32 +245,28 @@ public class Oauth2Bigquery {
                 logger.debug("Mac OS com.apple.eio.FileManager should handle the URL");
                 Class.forName("com.apple.eio.FileManager")
                         .getDeclaredMethod("openURL",
-                                new Class[] { String.class })
-                        .invoke(null, new Object[] { url });
+                                new Class[]{String.class})
+                        .invoke(null, new Object[]{url});
                 return;
-            }
-            else
-                if (osName.startsWith("Windows")) {
-                    logger.debug("Let's run internet suxplorer! with the URL: " + url);
-                    Runtime.getRuntime().exec(
-                            "cmd.exe /c start iexplore.exe \"" + url + "\"");
-                    return;
-                }
-                else { // assume Unix or Linux-
-                    logger.debug("Unix or Linux, we'll open a browser");
-                    String browser = null;
-                    for (String b : browsers) {
-                        if (browser == null
-                                && Runtime.getRuntime()
-                                        .exec(new String[] { "which", b })
-                                        .getInputStream().read() != -1) {
-                            Runtime.getRuntime().exec(
-                                    new String[] { browser = b, url });
-                        }
+            } else if (osName.startsWith("Windows")) {
+                logger.debug("Let's run internet suxplorer! with the URL: " + url);
+                Runtime.getRuntime().exec(
+                        "cmd.exe /c start iexplore.exe \"" + url + "\"");
+                return;
+            } else { // assume Unix or Linux-
+                logger.debug("Unix or Linux, we'll open a browser");
+                String browser = null;
+                for (String b : browsers) {
+                    if (browser == null
+                            && Runtime.getRuntime()
+                            .exec(new String[]{"which", b})
+                            .getInputStream().read() != -1) {
+                        Runtime.getRuntime().exec(
+                                new String[]{browser = b, url});
                     }
                 }
-        }
-        catch (Exception e) {
+            }
+        } catch (Exception e) {
             logger.debug("Failed", e);
             // handled below
         }
@@ -289,8 +278,7 @@ public class Oauth2Bigquery {
             myURLConnection.connect();
             logger.debug("success");
             return;
-        }
-        catch (Exception e) {
+        } catch (Exception e) {
             logger.debug(null, e);
             // handled below
         }
